--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .form-style-3 label > span{
 	float: left;
 	width: 200px;
-	color: #F072A9;
+	color: black;
 	font-weight: bold;
 	font-size: 13px;
 	text-shadow: 1px 1px 1px #fff;
@@ -21,26 +21,28 @@
 	margin: 0px 0px 10px 0px;
 	border: 1px solid #FFD2D2;
 	padding: 20px;
-	background: #FFF4F4;
+	background: orange;
 	box-shadow: inset 0px 0px 15px #FFE5E5;
 	-moz-box-shadow: inset 0px 0px 15px #FFE5E5;
 	-webkit-box-shadow: inset 0px 0px 15px #FFE5E5;
 }
 .form-style-3 fieldset legend{
-	color: #FFA0C9;
-	border-top: 1px solid #FFD2D2;
-	border-left: 1px solid #FFD2D2;
-	border-right: 1px solid #FFD2D2;
-	border-radius: 5px 5px 0px 0px;
-	-webkit-border-radius: 5px 5px 0px 0px;
-	-moz-border-radius: 5px 5px 0px 0px;
-	background: #FFF4F4;
-	padding: 0px 8px 3px 8px;
-	box-shadow: -0px -1px 2px #F1F1F1;
-	-moz-box-shadow:-0px -1px 2px #F1F1F1;
-	-webkit-box-shadow:-0px -1px 2px #F1F1F1;
-	font-weight: normal;
-	font-size: 12px;
+	color: #FFFFFF;
+    border-top: 5px solid #f43131;
+    border-left: 5px solid #f43131;
+    border-right: 5px solid #f43131;
+    border-bottom: 5px solid #F43131;
+    border-radius: 5px 5px 0px 0px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 5px 5px 0px 0px;
+    background: #f43131;
+    padding: 1.5px 20px 2px 20px;
+    box-shadow: 0px -1px 2px #f1f1f1;
+    -moz-box-shadow: -0px -1px 2px #F1F1F1;
+    -webkit-box-shadow: 0px -1px 2px #f1f1f1;
+    font-weight: normal;
+    font-size: 15px;
+	
 }
 .form-style-3 textarea{
 	width:250px;
@@ -59,9 +61,9 @@
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
-	border: 1px solid #FFC2DC;
+	border: 1px solid #f43131;
 	outline: none;
-	color: #F072A9;
+	color: #f43131;
 	padding: 5px 8px 5px 8px;
 	box-shadow: inset 1px 1px 4px #FFD5E7;
 	-moz-box-shadow: inset 1px 1px 4px #FFD5E7;
@@ -71,18 +73,23 @@
 }
 .form-style-3  input[type=submit],
 .form-style-3  input[type=button]{
-	background: #EB3B88;
+	background: #f43131;
 	border: 1px solid #C94A81;
 	padding: 5px 15px 5px 15px;
-	color: #FFCBE2;
-	box-shadow: inset -1px -1px 3px #FF62A7;
-	-moz-box-shadow: inset -1px -1px 3px #FF62A7;
-	-webkit-box-shadow: inset -1px -1px 3px #FF62A7;
+	color: #f43131;
 	border-radius: 3px;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;	
 	font-weight: bold;
+	transition: all 0.2s ease-in-out;
+	
+}
+
+.form-style-3  input[type=submit]:hover {
+	transform: scale(1.1);
+	cursor: pointer;
+	background-color: red;
 }
 .required{
 	color:red;
@@ -96,7 +103,7 @@
 .populatedQuestion{
 	padding: 5px 5px 5px 5px;
 	border-radius: 3px;
-	color: #C94A81;
+	color: #f43131;
 	font-weight: bold;
 	font-size: 13px;
 	text-shadow: 1px 1px 1px #fff;
@@ -111,4 +118,20 @@
 ol li::marker {
 	color: #C94A81;
 	font-weight: bold;
+}
+
+body{
+	background-color: black;
+	background-image: url('https://static.vecteezy.com/system/resources/previews/001/331/268/original/happy-halloween-from-the-spooky-castle-free-vector.jpg');
+	background-repeat: no-repeat;
+    background-size: 100rem;
+	
+}
+
+header{
+	color: white;
+	text-align: left;
+	padding-left: 70px;
+	
+	font-family: 'Creepster', cursive;
 }
