--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ main {
 
 #background {
 	flex-direction: column;
-	background-image: url(https://cdn.discordapp.com/attachments/1034470868069400708/1035230691199291454/Enlight305.jpg);
+	background-image: url(https://cdn.discordapp.com/attachments/1034470868069400708/1035326651673874483/1666911501.323985-FCD6D733-4777-4249-AC49-7A9C6DA95A9E.png);
 	height: 1080px;
     width: 1920px;
 }
