--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ main {
 #background {
 	flex-direction: column;
 	background-image: url(https://cdn.discordapp.com/attachments/1034470868069400708/1035326651673874483/1666911501.323985-FCD6D733-4777-4249-AC49-7A9C6DA95A9E.png);
-	height: 1080px;
-    width: 1920px;
+	height: 1000px;
+    width: 1500px;
 }
 
 #messages-container {
+  
   display: flex;
   float: right;
   flex-direction: column;
@@ -22,9 +23,21 @@ main {
   overflow-y: scroll;
   height: 100%;
   width: 450px;
+  margin-top: 20px;
+ margin-left: 600px;
+ border-color: #a52424;
+ border-width: 10px;
+  
 }
-#messages-header {
-  display: flex;
+#ursula {
+  background-color: #c94a81 ;
+  border-color: transparent;
+  text-align: center;
+  border-radius: 50px;
+    padding: 20px;
+    width: 60%;
+    margin: 10px;
+    color: white;
 }
 .message-box {
   display: flex;
@@ -35,6 +48,8 @@ main {
   padding: 20px;
   width: 60%;
   margin: 10px;
+  color: white;
+  
 }
 
 .message-name {
@@ -172,12 +187,13 @@ main {
 }
 
 #quizDiv {
-  background-color: lightgrey;
+ 
   margin-top: 10px;
 }
 
 #quizContainerDiv {
 	display: flex;
+  margin-top: 300px;
 }
 
 .populatedQuestion {
@@ -203,3 +219,150 @@ ol li::marker {
 #generate-message {
 	margin-top:100px;
 }
+
+.newMessage {
+  text-align: center;
+}
+
+/*------------------------*/
+.mainHeader{
+  font-family: "Courier New", Courier, monospace;
+  font-size: 45px;
+  
+  margin-top: 20px;
+  letter-spacing: 3px;
+  word-spacing: 0.1px;
+  color: #DAD4FF;
+  font-weight: 700;
+  text-decoration: none solid rgb(68, 68, 68);
+  font-style: normal;
+  font-variant: normal;
+  text-transform: uppercase;
+  color: #FFF;
+  padding: 2rem;
+  text-shadow: #FFF 0 -1px 4px, rgb(255, 0, 251) 0 -2px 10px, #c94a81 0 -10px 20px, red 0 -18px 40px;
+  }
+  #quizDiv {
+    font-family: "Courier New", Courier, monospace;
+  font-size: 24px;
+  letter-spacing: 2px;
+  word-spacing: 0.8px;
+  color:#c94a81;
+  font-weight: 700;
+  text-decoration: none solid rgb(68, 68, 68);
+  font-style: normal;
+  font-variant: normal;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 2px 13px 2px rgba(255,172,121,0.83); 
+  box-shadow: 0px 2px 13px 2px rgba(255,172,121,0.83);
+  background: #FFFFFF;
+  background: -moz-linear-gradient(top, #FFFFFF 0%, #F8FCFA 22%, #c94a81 100%);
+  background: -webkit-linear-gradient(top, #FFFFFF 0%, #F8FCFA 22%, #c94a81 100%);
+  background: linear-gradient(to bottom, #FFFFFF 0%, #F8FCFA 22%, #c94a81 100%);
+  outline-offset: 0px;
+  margin-right: -1000px;
+  width: 1000px;
+  height: 820px;
+  margin-bottom: 300px;
+  
+  }
+  
+  .populatedQuestion{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 18px;
+  letter-spacing: -0.2px;
+  word-spacing: 2px;
+  color: black;
+  font-weight: 700;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  
+  }
+  
+  #submit-answers{
+    -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  background-color: lightpink;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 12px;
+  letter-spacing: -0.2px;
+  word-spacing: 2px;
+  color:black;
+  font-weight: 700;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  padding: 6px;
+  
+  
+    
+  }
+  #generate{
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  background-color:#c94a81;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 12px;
+  letter-spacing: -0.2px;
+  word-spacing: 2px;
+  color: lightgray;
+  font-weight: 700;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  margin-top: 800px;
+  margin-left: 50px;
+  padding: 1rem
+  }
+  
+  #generate:hover {
+    background-color: #4580ee;
+    transition: 0.2s;
+  }
+  #submit-answers:hover {
+    background-color: #4580ee;
+    transition: 0.2s;
+  }
+
+  #totalForm{
+    position: absolute;
+    margin-left: -100px;
+    margin-top: -250px;
+   
+  
+  }
+  
+  #messageForm{
+    position: absolute;
+    margin-left: 500px;
+    margin-top: -250px;
+  
+  }
+ #mustRead{
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 10px;
+  letter-spacing: 1.2px;
+  word-spacing: -1px;
+  color: white;
+  font-weight: 400;
+  text-decoration: none;
+  font-style: italic;
+  font-variant: normal;
+  text-transform: none;
+  margin-top: -250px;
+  margin-left: 10px;
+  text-align: center;
+ }
+
+  
+   /* @keyframes slide{
+    0%{
+      transform: translate(0);
+    }
+    100%{
+      transform: translate(-4000px);
+    } */
